adding API changes and notes

--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultSQLConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Magic_VillaAPI;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=SSPI;"
+  },
+  "ApiSetting": {
+    "Secret": "this is JWT example secret"
   }
+  
 }
